# Meal-Mate-Replit-Claude

MealMate-replit/: app.py  auth.py  database.py  folder_manager.py  google_auth.py  main.py  meal_planner.py  models.py  pyproject.toml  recipe_extractor.py  recipe_extractor_simple.py  replit.md  replit_auth.py  smart_recipe_search.py
MealMate-replit/static/: manifest.json  script.js  style.css  sw.js
MealMate-replit/templates/: index.html  login.html
MealMate-replit/templates/auth/: login.html  profile.html  register.html
